[gd_scene load_steps=2 format=3 uid="uid://3to8nafqfg22"]

[ext_resource type="Script" path="res://stages/stage_0.gd" id="1_kvqo3"]

[node name="stage0" type="BoxContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvqo3")

[node name="platformerContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="platformerSubviewport" type="SubViewport" parent="platformerContainer"]
process_mode = 1
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "50"

[node name="topdownContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="topdownSubviewport" type="SubViewport" parent="topdownContainer"]
process_mode = 1
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="loading" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="loading"]
offset_left = 33.0
offset_right = 1185.0
offset_bottom = 648.0
